--- a/app/src/main/res/layout/sample_product.xml
+++ b/app/src/main/res/layout/sample_product.xml
@@ -7,7 +7,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="128dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
@@ -33,6 +33,14 @@
                 android:text="Product Price"
                 android:textSize="23sp"
                 android:textStyle="bold"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:id="@+id/btnEdit"
+                android:text="Edit"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:textColor="@android:color/holo_orange_light"
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
