--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -7,6 +7,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddProductActivity">
+    <ImageView
+        android:layout_width="150dp"
+        android:id="@+id/imageBrowse"
+        android:src="@drawable/baseline_add_a_photo_24"
+        android:layout_gravity="center"
+        android:layout_height="150dp"/>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:hint="Click on image to browse"
+        android:layout_marginBottom="20sp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"/>
 
     <EditText
         android:layout_width="match_parent"
