--- a/app/src/main/res/layout/activity_sensor_dash_board_acitivity.xml
+++ b/app/src/main/res/layout/activity_sensor_dash_board_acitivity.xml
@@ -18,4 +18,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.21" />
+
+    <Button
+        android:id="@+id/sbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="72dp"
+        android:text="Acceleration sensor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sensorBtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
