--- a/app/src/main/res/layout/activity_sensor_dash_board_acitivity.xml
+++ b/app/src/main/res/layout/activity_sensor_dash_board_acitivity.xml
@@ -28,4 +28,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sensorBtn" />
+
+    <Button
+        android:id="@+id/lightbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:text="Light Sensor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sbtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
